--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 </head>
 <body background="12.jpg" style="background-repeat:no-repeat;
 background-size:100% 100%;background-attachment: fixed;color:white
-"onload="setInterval('clock()',1000)">	<!--插入背景图片,且自适应-->
+">	<!--插入背景图片,且自适应-->
 欢迎登陆
 <br><br><br><br>
 	<div style="text-align:center;font-size:2em;">
