--- a/host.html
+++ b/host.html
@@ -6,7 +6,7 @@
 </head>
 <body background="12.jpg" style="background-repeat:no-repeat;
 background-size:100% 100%;background-attachment: fixed;
-"onload="setInterval('clock()',1000)">	<!--插入背景图片,且自适应-->
+">	<!--插入背景图片,且自适应-->
 <br><br><br><br>
 	<div style="text-align:center;font-size:5em;">
 <a href="http://localhost/my_project/login.html" style="color:white;text-shadow:0px -1px 0px #000000,0px 1px 3px #606060;color:#000000;">login</a>
