--- a/signup.html
+++ b/signup.html
@@ -6,16 +6,16 @@
 </head>
 <body background="12.jpg" style="background-repeat:no-repeat;
 background-size:100% 100%;background-attachment: fixed;color:white
-"onload="setInterval('clock()',1000)">	<!--插入背景图片,且自适应-->
+">	<!--插入背景图片,且自适应-->
 欢迎注册
 <br><br>
 	<div style="text-align:left;font-size:2em">
  <form action="signup_x.php" method="post" enctype="multipart/form-data">
  	<input type="file" name="headimage" >	上传头像<br><br>
  	<input type="text" name="name" style="font-size:1em">  姓名<br>
- 	<input type="radio" id="man" name="sex"  value="man"><label for="man">男
+ 	<input type="radio" id="man" name="sex"  value="男"><label for="man">男
  	</label>
-	<input type="radio" id="woman" name="sex" checked value="woman"><label for="woman">女</label> 性别<br><br>
+	<input type="radio" id="woman" name="sex" checked value="女"><label for="woman">女</label> 性别<br><br>
 	<input type="number" name="age" style="font-size:1em"
 	onkeyup="(this.v=function(){this.value=this.value.replace(/[^0-9-]+/,'');}).call(this)" onblur="this.v();">	年龄<br><br>
 	<input type="text" name="id" style="font-size:1em" 
