--- a/host.html
+++ b/host.html
@@ -8,10 +8,11 @@
 background-size:100% 100%;background-attachment: fixed;
 ">	<!--插入背景图片,且自适应-->
 <br><br><br><br>
-	<div style="text-align:center;font-size:5em;">
-<a href="http://localhost/my_project/login.html" style="color:white;text-shadow:0px -1px 0px #000000,0px 1px 3px #606060;color:#000000;">login</a>
+	<div style="text-align:center;font-size:4em;color:white">
+		欢迎登陆学工系统<br>
+<a href="http://localhost/my_project/login.html" style="text-shadow:0px -1px 0px #000000,0px 1px 3px #606060;color:#000000;">登录</a>
 <!-- 跳转登录界面 -->
-<a href="http://localhost/my_project/signup.html" style="color:white;text-shadow:0px -1px 0px #000000,0px 1px 3px #606060;color:#000000;">signup</a>
+<a href="http://localhost/my_project/signup.html" style="text-shadow:0px -1px 0px #000000,0px 1px 3px #606060;color:#000000;">注册</a>
 <!-- 跳转注册界面 -->
 
 
